--- a/client/src/app/components/blog/update-blog/update-blog.component.css
+++ b/client/src/app/components/blog/update-blog/update-blog.component.css
@@ -1,4 +1,4 @@
-.popup-modal-wrapper{
+.popup-modal-wrapper {
 	position: fixed;
 	width: 100%;
 	top: 0;
@@ -6,30 +6,30 @@
 	z-index: 1060;
 }
 
-.popup-modal{
+.popup-modal {
 	margin: auto;
 	margin-top: 7rem;
 }
 
-.modal-header{
+.modal-header {
 	padding: 10px !important;
 	background: #f6f7f9;
 	border-radius: .3rem .3rem 0 0;
 }
 
-.modal-title{
+.modal-title {
 	line-height: 0;
 }
 
-.modal-footer{
+.modal-footer {
 	padding: 10px !important;
 }
 
-button.close{
+button.close {
 	margin-right: 5px;
 }
 
-.fa{
+.fa {
 	padding-right: 5px;
 }
 
@@ -37,19 +37,20 @@ button.close{
 	padding-right: 0;
 }*/
 
-.fa-pencil,.fa-trash-o{
+.fa-pencil,
+.fa-trash-o {
 	padding: 0 2px 0 2px;
 }
 
-.btn-upvote{
+.btn-upvote {
 	color: #006700;
 }
 
-.btn-downvote{
+.btn-downvote {
 	color: #9a0000;
 }
 
-.btn-nobg{
+.btn-nobg {
 	cursor: pointer;
 	background: none;
 	color: #666;
@@ -57,47 +58,49 @@ button.close{
 	font-weight: 600;
 }
 
-.btn-nobg:hover{
+.btn-nobg:hover {
 	color: #222;
 }
 
-.card{
-	margin: 0 auto 15px auto;
+.card {
+	margin: 0 auto 25px auto;
 }
 
-.no-margin{
+.no-margin {
 	margin-bottom: 0;
 }
 
-.card-title-box{
+.card-title-box {
 	display: inline-block;
 	cursor: pointer;
 }
 
 .card-body::-webkit-scrollbar {
-    -webkit-appearance: none;
-    width: 7px;
-}
-.card-body::-webkit-scrollbar-thumb {
-    border-radius: 4px;
-    background-color: rgba(0,0,0,.5);
-    box-shadow: 0 0 1px rgba(255,255,255,.5);
-    -webkit-box-shadow: 0 0 1px rgba(255,255,255,.5);
+	-webkit-appearance: none;
+	width: 7px;
 }
 
-.card-footer{
+.card-body::-webkit-scrollbar-thumb {
+	border-radius: 4px;
+	background-color: rgba(0, 0, 0, .5);
+	box-shadow: 0 0 1px rgba(255, 255, 255, .5);
+	-webkit-box-shadow: 0 0 1px rgba(255, 255, 255, .5);
+}
+
+.card-footer {
 	padding: .35rem 1.25rem;
 }
-.card-footer .btn{
+
+.card-footer .btn {
 	opacity: 0.8;
 }
 
-.card-footer .owner{
-    border: none;
-    pointer-events:none;
+.card-footer .owner {
+	border: none;
+	pointer-events: none;
 }
 
-.form-group{
+.form-group {
 	width: 920px;
 }
 
@@ -114,4 +117,14 @@ button.close{
 
 .leadin-textarea {
 	height: 120px;
+	font-size: 1rem;
+	letter-spacing: 0.6px;
+	text-align: justify;
+	font-family: Helvetica, Arial, sans-serif;
+}
+
+@media (min-width: 768px) {
+	.leadin-textarea {
+		font-size: 1.25rem;
+	}
 }
