--- a/client/src/app/components/navbar/navbar.component.css
+++ b/client/src/app/components/navbar/navbar.component.css
@@ -1,4 +1,4 @@
-.navbar{
+.navbar {
 	position: fixed;
 	/*border-bottom: 1px solid #dedede;*/
 	/*background-color: #fefefe;*/
@@ -21,8 +21,8 @@
 	padding: 25px 25px 25px 15px;
 }
 
-@media (min-width: 768px){
-	.navbar{
+@media (min-width: 768px) {
+	.navbar {
 		padding: 25px 0 0 0;
 	}
 
@@ -34,25 +34,27 @@
 	}
 }
 
-.container{
+.container {
 	height: 55px;
 	padding: 0 30px 0 30px;
 }
 
-.nav-border{
-	border-bottom: 1px solid #dedede;
+.nav-border {
+	/* border-bottom: 1px solid #dedede; */
 	transition: none;
 }
 
-.alert-info p{
+.alert-info p {
 	padding: 0;
 }
-.headroom{
-    will-change: transform;
-    transition: transform 300ms linear;
+
+.headroom {
+	will-change: transform;
+	transition: transform 300ms linear;
 }
+
 .headroom--pinned {
-    transform: translateY(0%);
+	transform: translateY(0%);
 }
 
 .headroom--not-top {
@@ -61,10 +63,10 @@
 }
 
 .headroom--unpinned {
-    transform: translateY(-100%);
+	transform: translateY(-100%);
 }
 
-.temp-logo-font{
+.temp-logo-font {
 	color: black;
 	font-family: "Lucida Grande", Helvetica, Arial, sans-serif;
 	font-size: 1em;
@@ -74,11 +76,11 @@
 	display: table-cell;
 }
 
-.nav-item{
+.nav-item {
 	margin-left: 12px;
 }
 
-.nav-link{
+.nav-link {
 	margin-top: 1px;
 	color: #555;
 	font-weight: 600;
@@ -88,15 +90,15 @@
     border-radius: 5px;*/
 }
 
-.input-group{
+.input-group {
 	height: 28px;
 }
 
-.input-group-addon{
+.input-group-addon {
 	color: #333;
 }
 
-.form-control{
+.form-control {
 	outline: none;
 	margin-left: -1px;
 	border-radius: .4rem;
@@ -106,12 +108,12 @@
 	font-family: sans-serif;
 }
 
-.form-control:focus{
+.form-control:focus {
 	@include box-shadow(0 0 5px rgba(0, 0, 0, 0.5));
 	box-shadow: inset 0 0 2px #ccc;
 	border: 1px solid rgba(0, 0, 0, 0.3);
 }
 
-.form-control:focus::-webkit-input-placeholder{
+.form-control:focus::-webkit-input-placeholder {
 	opacity: 0.5;
 }
