--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -116,7 +116,7 @@ a:focus {
 }
 
 form[name="blogForm"] {
-	max-width: 800px;
+	max-width: 803.2px;
 	margin: auto;
 }
 
@@ -125,7 +125,7 @@ form[name="blogForm"] {
 }
 
 .ql-hide .ql-container {
-	background-color: #f8f8fe;
+	background-color: transparent;
 }
 
 .ql-disabled {
@@ -147,20 +147,46 @@ form[name="blogForm"] {
 }
 
 .ql-container {
+	font-size: 1rem;
 	margin-top: 5px;
 	border-radius: .25rem;
 	border-top: 1px solid #ccc;
 	background-color: #fff;
+	letter-spacing: 0.6px;
+}
+
+@media (min-width: 768px) {
+	.ql-container {
+		font-size: 1.25rem;
+	}
 }
 
 .ql-toolbar.ql-snow+.ql-container.ql-snow {
 	border-top: 1px solid #ccc;
 }
 
-.ql-editor p,
-.ql-editor blockquote {
-	font-size: 1.17em;
-	letter-spacing: 0.6px;
+.ql-editor {
+	padding: 12px 0;
+	line-height: 1.6;
+}
+
+.ql-editor[contenteditable=true] {
+	padding: .75rem;
+}
+
+@media (min-width: 768px) {
+	.ql-editor {
+		padding: 12px 15px;
+	}
+
+	.ql-editor[contenteditable=true] {
+		padding: 12px 15px;
+	}
+}
+
+.ql-editor ol>li,
+.ql-editor ul>li {
+	line-height: 1.6;
 }
 
 .ql-editor h1,
@@ -171,7 +197,6 @@ form[name="blogForm"] {
 .ql-editor h6,
 .ql-editor p,
 .ql-editor blockquote {
-	line-height: 1.6;
 	letter-spacing: 0.6px;
 }
 
@@ -194,7 +219,15 @@ body {
 }
 
 #body-container {
-	margin-top: 100px;
+	margin-top: 85px;
+	padding: 0 .75rem 0 .75rem;
+}
+
+@media (min-width: 768px) {
+	#body-container {
+		margin-top: 100px;
+		padding: 0 30px 0 30px;
+	}
 }
 
 .overlay {
@@ -392,10 +425,19 @@ button[disabled] {
 }
 
 .card-body {
-	padding: 1rem !important;
+	padding: 1rem 0 1rem 0 !important;
 	overflow-y: scroll;
 	max-height: 28rem;
+	/* font-family: Helvetica, Arial, sans-serif; */
+	font-family: 'Raleway', Calibri, Arial, sans-serif;
 }
+
+@media (min-width: 768px) {
+	.card-body {
+		padding: 1rem !important;
+	}
+}
+
 
 .card-text {
 	font-size: 0.92rem;
@@ -416,4 +458,8 @@ button[disabled] {
 .form-error-msg .fa {
 	padding-right: 10px;
 	transition: none;
+}
+
+.ql-editor.ql-blank::before {
+	font-style: normal;
 }
